--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
